# browser

./: .gitignore  Cargo.toml  run_on_wasabi.sh
browser_core/: Cargo.toml
browser_core/src/: error.rs  http.rs  lib.rs  url.rs
browser_core/src/renderer/dom/: node.rs
browser_core/src/renderer/html/: attribute.rs  mod.rs  parser.rs  token.rs
core/: url.py
net/wasabi/: Cargo.toml
net/wasabi/src/: http.rs
python/: browser.py  main.py  test.html
python/core/: url.py
rust/: Cargo.toml
src/: main.rs
